# AVProject

./: .gitignore  build.gradle  settings.gradle
CastScreenPlayApp/: build.gradle
CastScreenPlayApp/src/main/: AndroidManifest.xml
CastScreenPlayApp/src/main/res/layout/: activity_main.xml
CastScreenPlayApp/src/main/res/values/: strings.xml
CastScreenPlayApp/src/main/res/values-night/: themes.xml
CastScreenPushApp/: build.gradle
CastScreenPushApp/src/main/: AndroidManifest.xml
EsSocket/: build.gradle
ScreenRecorder/: build.gradle
ScreenRecorder/src/main/: AndroidManifest.xml
VSEncoder/: build.gradle
VSEncoder/src/main/: AndroidManifest.xml
VSEncoder/src/main/cpp/: x264-lib.cpp
app/: build.gradle
app/src/main/: AndroidManifest.xml
audiomix/: build.gradle
audiomix/src/main/: AndroidManifest.xml
audiosimpleclip/: build.gradle
audiosimpleclip/src/main/: AndroidManifest.xml
espermission/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
mediacodecdemo/: build.gradle
mediacodecdemo/src/main/: AndroidManifest.xml
videomuxersimple/: build.gradle
videomuxersimple/src/main/: AndroidManifest.xml
x264simple/: build.gradle
x264simple/src/main/: AndroidManifest.xml
x264simple/src/main/cpp/: CMakeLists.txt  JavaCallHelper.cpp  VideoEncoder.cpp  VideoEncoder.h  nlog.h  x264-lib.cpp
x264simple/src/main/cpp/core/: JavaCallHelper.cpp  JavaCallHelper.h  VideoEncoder.cpp  VideoEncoder.h
x264simple/src/main/cpp/x264/armeabi-v7a/lib/pkgconfig/: x264.pc
yuvcamera/: build.gradle
yuvcamera/src/main/: AndroidManifest.xml
(+123 files in other folders)
